# aura-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DSP_MANIFESTO.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
desktop-app/: start.bat
desktop-app/src/: index.html
desktop-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: main.rs
desktop-app/src-tauri/src/audio/: cancel_flag.rs  dsp_core.rs  hpss_native.rs  hybrid_phase.rs  logging.rs  memory.rs  mod.rs  processor.rs
desktop-app/src-tauri/src/audio/converter/: apodize.rs  decode.rs  encode.rs  manager.rs  mod.rs  process.rs  state.rs  types.rs
desktop-app/src-tauri/src/audio/converter/dsp/: dither.rs  filter.rs  mod.rs  polyphase.rs  true_peak.rs
desktop-app/src-tauri/src/audio/converter/pipeline/: hybrid_mixer.rs  mod.rs  prepare.rs  resample_logic.rs
desktop-app/src-tauri/src/audio/converter/utils/: verify.rs
desktop-app/src-tauri/src/audio/gpu/: bind_groups.rs  context.rs  ds_preflight.rs  fft_math.rs  mod.rs  processor.rs  setup.rs  wola.rs
desktop-app/src-tauri/src/audio/shaders/: ds_core.wgsl  ds_preflight.comp.glsl  gpu_fft.comp.glsl  gpu_fft.wgsl  gpu_ola.comp.glsl  gpu_ola.wgsl  qs_core.wgsl
desktop-app/src-tauri/src/audio/shaders/precompiled/: ds_preflight.spv  gpu_fft_bit_reverse.spv  gpu_fft_pass.spv  gpu_ola.spv
desktop-app/src/components/: converter.html
desktop-app/src/css/: style.css
desktop-app/src/js/: converter.js  dropzone.js  helpers.js  main.js  settings.js  state.js  ui.js
docs/: 01-architecture.md  04-developer-guide.md  05-converter-pipeline.md  06-hybrid-phase-proof.md  07-audiophile-features.md  08-project-structure.md  09-audio-auditor-guide.md  11-group-delay-truncation-tradeoff.md  12-precomputed-fir-matrix.md  13-pipeline-hardening-2026-07.md  14-adaptive-apodizer-v3.md  15-measurements.md  README.md  index.html
fir-optimizer/: README.md  analyze_source.py  animate_hybrid.py  audiophile_analysis.py  compare.bat  compare.py  config.json  generate_envelope.py  optimize.py  plot_measurements.py  requirements.txt  start.bat  test_align.py  verify_hybrid.bat  verify_hybrid_phase.py
